traversal.snake.Snake.scala.error
Compilation error:
Snake:55: error: Unmatched closing brace '}' ignored here
}
^